example landing page

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hella-simple-eleventy-tailwind-starter",
   "description": "Hella Simple Eleventy + Tailwind Starter",
   "scripts": {
-    "serve": "rm -rf _site && npx @11ty/eleventy --serve --quiet & npx @tailwindcss/cli -i ./src/styles.css -o ./_site/styles.css --watch",
+    "serve": "npx @11ty/eleventy --serve --quiet & npx @tailwindcss/cli -i ./src/styles.css -o ./_site/styles.css --watch",
     "build": "rm -rf _site && ELEVENTY_ENV=production npx @11ty/eleventy && npx @tailwindcss/cli -i ./src/styles.css -o ./_site/styles.css --minify"
   },
   "keywords": [
@@ -18,5 +18,8 @@
     "@11ty/eleventy": "^3.0.0",
     "@tailwindcss/cli": "^4.1.5",
     "tailwindcss": "^4.1.5"
+  },
+  "dependencies": {
+    "@11ty/eleventy-img": "^6.0.3"
   }
 }
